More contrast and fixed anim on phone I think

--- a/css/style.css
+++ b/css/style.css
@@ -1389,5 +1389,5 @@ Parallax
 }
 
 .slogan-contrast{
-    background-color:  rgba(0,0,0,0.5);
+    background-color:  rgba(0,0,0,0.8);
 }
